@@ -10,3 +10,4 @@ screen.class = Log::Dispatch::Screen
 screen.min_level = info
 screen.stderr = 1
 screen.format = %m
+
