@@ -1,8 +1,13 @@
 Revision history for Perl extension Log::Dispatch::Config.
 
 0.06
-	* A lot of code rewrite for Alternate Config selection
+	* Added Log::Dispatch::Configurator and docs/tests for it
 	  (Thanks to Matt Sergeant <matt@sergeant.org>)
+	- Removed pseudo-hash dependency
+	  (Thanks to Dave Rolsky <autarch@urth.org>)
+	* Added Date/Time format configuration
+	  (Thanks to Matt Sergeant <matt@sergeant.org>)
+	- Deprecated ${XXX} style format
 
 0.05  Thu Dec  6 19:05:11 JST 2001
 	- CVS glitches in Makefile.PL (replacement of the RCS keyword ..)
